# Imaginer

./: .gitignore  CMakeLists.txt  Imaginer.cmake  Imaginer.pro  README.md  main.cpp  makefile
doc/: Imaginer进展.md  edge.txt  关于极点对获取的新的思考.md  关于边界点标记的原理.md  关于边界移动时碰撞的原理讨论.md  关于边界线的几个问题说明.md  关于链接的问题(About link's  problem).txt
doc/fonts/: chinese.ifs  fonts.if  fonts.ifs  genchinese.sh  genfonts.sh  words.ifs
doc/fonts/chinese/: newname.sh  oldname.sh  rename.sh
doc/help/: edge.txt  关于边界点标记的原理.md  关于链接的问题(About link's  problem).md  边界线处理过程中的几个数据结构的简介.md
help/: README.md  near.gsp  几何画板5.06迷你增强版(The Geometer's Sketchpad).rar  模拟碰撞.gsp  移动.gsp
include/: Rbmp.cpp  Rbmp.h  base.h  common.cpp  core.cpp  getOpt.cpp  ibmp.h  image.h  ipoint.cpp  ipoint.h  linker.h
include/BaseData/: ibmp.h
include/Commons/: iCommons.h
include/DPC/: dataPcer.h  dpcComm.h  dpcCons.h  dpcCore.h
include/DPer/: BmpPer.h  DperMum.h  iConsper.h
include/MetaData/: iColor.h  iPixels.h  iPoint.h  imetadata.h
include/Utils/: getOpt.h  iCsTransf.h  iFonts.h  iGenfuner.h  iMatrix.h  iRpn.h  iStack.h  iTransfMatrix.h  iUtils.h  iVector.h
jni/: Android.mk  Application.mk
sdk/: getOpt.cpp
sdk/etc/: logsys.conf
sdk/getOpt/: CMakeLists.txt  getOpt.cpp  getOpt.h  makefile  usage.cpp
sdk/inc/: Basethread.h  Mdef.h  confdata.h  filedata.h  lmutex.h  log_T.h  lthread.h  parseconf.h
src/: CMakeLists.txt  bmp.cpp  log.cpp  readbmp.cpp  setbmp.cpp
src/DPC/: dataPcer.cpp  dpcComm.cpp  dpcCons.cpp  dpcCore.cpp
src/DPer/: BmpPer.cpp  iConsper.cpp
src/MetaData/: iColor.cpp  iPixels.cpp  iPoint.cpp
src/Utils/: getOpt.cpp  iColor.cpp  iCsTransf.cpp  iFonts.cpp  iGenfuner.cpp  iMatrix.cpp  iRpn.cpp  iTransfMatrix.cpp  iUtils.cpp  iVector.cpp
tool/getOpt/: README.md  getOpt.cpp  getOpt.pro  usage.cpp
tool/iFonts/: CMakeLists.txt  iFonts.cpp  iFonts.h  iFonts.pro  main.cpp
